<resources>
    <string name="app_name">MadFinalApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- fragment_trivia_category -->
    <string name="general">General</string>
    <string name="books">Books</string>
    <string name="films">Films</string>
    <string name="music">Music</string>
    <string name="musicals">Musicals</string>
    <string name="television">Television</string>
    <string name="video_games">Video Games</string>
    <string name="board_games">Board Games</string>

    <!-- fragment_trivia_question -->
    <string name="question_label">Question #%d</string>
    <string name="question">Insert question here</string>
    <string name="answer_one">Insert answer one</string>
    <string name="answer_two">Insert answer two</string>
    <string name="answer_three">Insert answer three</string>
    <string name="answer_four">Insert answer four</string>

    <!-- fragment_trivia_history_detail -->
    <string name="chosen_answer">Chosen answer: %1$s</string>
    <string name="correct_answer">Correct answer: %1$s</string>


</resources>