<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TriviaCategoryFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnGeneral"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/mandy"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/general"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btnBooks"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/mulberry"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/books"
                app:cornerRadius="0dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnFilms"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/strikemaster"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/films"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btnMusic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/butterfly_bush"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/music"
                app:cornerRadius="0dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnMusicals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/east_bay"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/musicals"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btnTelevision"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/pickled_bluewood"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/television"
                app:cornerRadius="0dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnVideoGames"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/elm"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/video_games"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btnBoardGames"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/niagara"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/board_games"
                app:cornerRadius="0dp" />

        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/ivOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminate="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>